shift authenticity discussion to end

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -9,6 +9,7 @@ categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
 
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -45,20 +46,19 @@ title: 4. Exploration of the Formative Learning Design Process
     work](#identity-hardcore-coding-dysfunctional-group-work)
 -   [2. Facilitator conflict addressing the Play
     Paradox](#facilitator-conflict-addressing-the-play-paradox)
-    -   [Using Physical Maps of Missions as Game Design Patterns -
-        COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
+    -   [Using Physical Maps of Missions as Game Design
+        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [Observations on tensions which the learning and
             navigational maps have potential to
             address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
         -   [Resolving the conflict in an informal setting by ignoring
             it](#resolving-the-conflict-in-an-informal-setting-by-ignoring-it)
--   [3. Participant conflict due to lack of access to
-    tools](#participant-conflict-due-to-lack-of-access-to-tools)
-    -   [Tensions between authenticity in choice of toolset and user
-        progress](#tensions-between-authenticity-in-choice-of-toolset-and-user-progress)
-    -   [Impact of use of code
-        playground](#impact-of-use-of-code-playground)
+-   [3. Participant conflict due to lack of access and familiarity to
+    tools](#participant-conflict-due-to-lack-of-access-and-familiarity-to-tools)
+    -   [Motivations around in choice of
+        toolset](#motivations-around-in-choice-of-toolset)
+    -   [Code playground (as IDE?)](#code-playground-as-ide)
         -   [Addressing complexity of code environment with code
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
@@ -800,9 +800,7 @@ In journal notes and in video data I observed participants developing responses 
  -
 <!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
 
-
-**Why not Scratch? - differences in terms of tool set**
-NOTE - MOVED - SO REMOVE / MOVE PARTS ON THE TEMPLATE
+##### Why not Scratch? - differences in terms of tool set
 
 As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people.
 
@@ -811,37 +809,23 @@ I chose to not use Scratch, partly as it was well reseached and partly to priori
 <!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 
-I now explore 2/3 key obstacles and how they were addressed.
+<!-- I now explore 2/3 key obstacles and how they were addressed. -->
 
 Creation and migration of graphical and audio assets.
 
 In Scatch there are tabs which host simplified graphical and audio studios. Design decisions priorise ease of use and the ability to record audio right into the program.
 
-In P1, I used a variety of graphical and audio tools including Scratch to create backgrounds, Piskel to create pixel graphics, Audacity, Sonic Pi for background music, Bxr online for sound effects. 
+In P1, I used a variety of graphical and audio tools including Scratch to create backgrounds, Piskel to create pixel graphics, Audacity, Sonic Pi for background music, Bxr online for sound effects.
 
 Participants would then have to save assets in a compatible format and upload them to the code playground, and link the file using a line of code.
 
-The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.
+The self-contained of scratch has this reduces possibility for compounding errors caused by mirgration of data.
 
-Hoewver, to counter this, I observered a a palpable  a sense of achievement of doing this in code.
+The difference in friction to adding assets is significant and the possibilities for it to go wrong also great. Hoewver, to counter this, I observered a palpable  a sense of achievement of doing this in code.
 
 While in P2 and P3 I reduced the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
 
-The clear software-based self-containment of scratch has clear advantages of control and reducing possibility for compounding errors. Microworlds also offer practical restriction and containment.
 
-I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
-
-These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
-
-The following issues are relevant to the learner experience- other ways to enclose / protect )
-- Issue of the complexity of support and technical documentation
-
-
-**Discussion on design principles / heuristics  community design and guiding community behaviours :**
-
-While Resnick's principles  heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
-
-Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
 
 
 
@@ -891,9 +875,6 @@ The a game template served to remove technical barriers to getting immediate fee
 ### Design choices of the half-baked template
 
 The process of getting started in P1 took too long and from a motivation of an responsive lacked a guiding structure. Introducing a starting template helped participants build from this base and build familiarity with the code. However, the process of adding elements still needed significant support and I decided to work on the following elements to make the process of design by modification easier.
-
-
-
 
 
 #### Addressing barriers with template
@@ -954,7 +935,6 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 
 ### Design behaviours encouraged through use of game template
-
 
 In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
@@ -1024,33 +1004,6 @@ DEVELOP THIS SECTION -->
 <!-- These observations can be explore in relation to other research
 - This research supports claims that half-baked games invite development []
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
-
-
-
-### Discussion on Authenticity of Tools
-
-**observations?**
-
-There are similarities and differences between the use of code playgrounds by novices and professionals.
-DEVELOP IF NEEDED
-
-
-While tempting to say that the use of a template is educational scaffolding and therefore not authentic to a work place setting environment, the use of starting templates is also a common work place tactic. For example the js libary boostrap comes with starter templates.
-
-Glitch has many such starter templates aimed at professionals trying out a different code language or framework.
-
-**impact?**
-
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
-
-The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
-
-The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
-These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
-
-While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
-
 
 
 
@@ -1213,6 +1166,30 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 
 
+### Discussion on Authenticity of Tools
+
+**observations?**
+
+There are similarities and differences between the use of code playgrounds by novices and professionals.
+DEVELOP IF NEEDED
+
+While tempting to say that the use of a template is educational scaffolding and therefore not authentic to a work place setting environment, the use of starting templates is also a common work place tactic. For example the js libary boostrap comes with starter templates.
+
+Glitch has many such starter templates aimed at professionals trying out a different code language or framework.
+
+**impact?**
+
+An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
+
+The design of the starting template shields learners from much of the complexity of the underlying web-technology and provided potential affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout.
+
+The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+
+
 
 ### Analysis in relation to existing research on related design toolsets
 
@@ -1228,10 +1205,6 @@ While early use of microworlds as a "acceptable" authentic-ish a concept endorse
 - Choice of Thimble initially
 - lack of mature community
 
-
-
-
-
 #### Comparing design to Scratch and Microworlds
 
 This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
@@ -1240,10 +1213,30 @@ While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtl
 
 Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT.
 
+
+**Discussion on design principles / heuristics  community design and guiding community behaviours :**
+
+Recap of constructionist heuristics .
+
 In scratch, the ability to reduce syntax errors through block coding was adopted.
 
-Reducing the complexity of coding environment in one of serveral guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005]. Other user-friendly design heuristics inclue:  low-thresholds, wide-walls, high-ceiling
-NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs -
+Reducing the complexity of coding environment in one of serveral guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
+
+Other user-friendly design heuristics inclue:  low-thresholds, wide-walls, high-ceiling
+
+While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
+
+I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code.
+
+These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild.
+
+The following issues are relevant to the learner experience- other ways to enclose / protect )
+- Issue of the complexity of support and technical documentation
+
+Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
+
+
+
 
 <!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
@@ -1385,9 +1378,6 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/
 [^3]: https://glitch-game-makers-manual.glitch.me/
 [^4]: map of GDP
-
-
-
 
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
