--- a/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-9-4-Design.md_toc.md
@@ -34,20 +34,19 @@
     work](#identity-hardcore-coding-dysfunctional-group-work)
 -   [2. Facilitator conflict addressing the Play
     Paradox](#facilitator-conflict-addressing-the-play-paradox)
-    -   [Using Physical Maps of Missions as Game Design Patterns -
-        COMPRESS](#using-physical-maps-of-missions-as-game-design-patterns---compress)
+    -   [Using Physical Maps of Missions as Game Design
+        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
         -   [Learning Dimensions Map](#learning-dimensions-map)
         -   [Observations on tensions which the learning and
             navigational maps have potential to
             address.](#observations-on-tensions-which-the-learning-and-navigational-maps-have-potential-to-address.)
         -   [Resolving the conflict in an informal setting by ignoring
             it](#resolving-the-conflict-in-an-informal-setting-by-ignoring-it)
--   [3. Participant conflict due to lack of access to
-    tools](#participant-conflict-due-to-lack-of-access-to-tools)
-    -   [Tensions between authenticity in choice of toolset and user
-        progress](#tensions-between-authenticity-in-choice-of-toolset-and-user-progress)
-    -   [Impact of use of code
-        playground](#impact-of-use-of-code-playground)
+-   [3. Participant conflict due to lack of access and familiarity to
+    tools](#participant-conflict-due-to-lack-of-access-and-familiarity-to-tools)
+    -   [Motivations around in choice of
+        toolset](#motivations-around-in-choice-of-toolset)
+    -   [Code playground (as IDE?)](#code-playground-as-ide)
         -   [Addressing complexity of code environment with code
             playground](#addressing-complexity-of-code-environment-with-code-playground)
     -   [Design choices of the half-baked
