Quick start cards

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -431,14 +431,14 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 | P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
 
 
-## Commentary on evolution of design by Phase
+The following sections briefly outline tools and processes giving a synthesised overview. Later sections explore tools use in more depth.
 
 ### P1: Explorations and innovations
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
 
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code framework of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my  competency as a facilitator. The process began with no pre-existing supporting materials. In response to need, I adapted a starting code template of a platform game and created various code examples to add functionality requested by participants. At the end of this stage participants showcased their games to students in the foyer of the MMU Brooks building. Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful. Extracts of feedback notes are included as appendix 4.x
 
 The end of this phase in mid to late 2018 involved responding to this feedback and working together with PGCE computing students and delivery three one-off workshops at conferences and a Manchester library fun day. The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process. The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences. The results in terms of engagement and impact on changing the game were very promising.
 
@@ -791,6 +791,7 @@ My motivation for choice of code language (Javascript, Phaser) was driven by des
 This section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
 
 #### Addressing complexity of code environment with code playground
+
 In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked.
 
 In journal notes and in video data I observed participants developing responses to immediate barriers that the new tool introduced.
@@ -802,34 +803,19 @@ In journal notes and in video data I observed participants developing responses 
 
 ##### Why not Scratch? - differences in terms of tool set
 
-As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people.
-
-I chose to not use Scratch, partly as it was well reseached and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
+As explored in the literature review, an extensive body of research on the design motivations and impact on learners exists for the creative coding tools Scratch. While Scratch, is aimed a broad range of media creation, much of this research involves game making as a popular genre of media of young people. I chose to not use Scratch for this study, partly as it was well reseached and partly to prioritise authenticity of tool set despite the removal of certain technical barriers offered by such a self-contained tools set.  
 
 <!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
+<!-- #### Creation and migration of graphical and audio assets. -->
 
-<!-- I now explore 2/3 key obstacles and how they were addressed. -->
+In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
 
-Creation and migration of graphical and audio assets.
+In Scatch there are tabs which host simplified graphical and audio studios. Design decisions priorise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. Hoewver, to justify this choice, I observered a palpable a sense of achievement when participants suceeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
 
-In Scatch there are tabs which host simplified graphical and audio studios. Design decisions priorise ease of use and the ability to record audio right into the program.
+<!-- The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.  -->
 
-In P1, I used a variety of graphical and audio tools including Scratch to create backgrounds, Piskel to create pixel graphics, Audacity, Sonic Pi for background music, Bxr online for sound effects.
-
-Participants would then have to save assets in a compatible format and upload them to the code playground, and link the file using a line of code.
-
-The self-contained of scratch has this reduces possibility for compounding errors caused by mirgration of data.
-
-The difference in friction to adding assets is significant and the possibilities for it to go wrong also great. Hoewver, to counter this, I observered a palpable  a sense of achievement of doing this in code.
-
-While in P2 and P3 I reduced the number of tools suggested to create graphical assets, there was still the process of transfer from one to the other creating a porous learning environment.
-
-
-
-
-
-
+To find middle ground, in P2 and P3 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
@@ -857,9 +843,6 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
  -->
 
-
-
-
 <!-- ### ORIGINAL SECTION
 **Code Playground to overcoming lack of software feedback**
 
@@ -874,16 +857,33 @@ The a game template served to remove technical barriers to getting immediate fee
 
 ### Design choices of the half-baked template
 
-The process of getting started in P1 took too long and from a motivation of an responsive lacked a guiding structure. Introducing a starting template helped participants build from this base and build familiarity with the code. However, the process of adding elements still needed significant support and I decided to work on the following elements to make the process of design by modification easier.
+The process of getting started in P1 took too long and from a motivation of an responsive lacked a guiding structure. To address confusion about how to being coding a game, I introduced a working code example
+as a beginner template using the phaser library. Code
+
+The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website, one I had completed in preparation for the sessions, called _Making your first game_ [^1]. To use it as a template I adapted it by removing out un-needed code with a focus on simplifying the structure and readability.
+
+Starting templates are a common tool when learning new code frameworks particularly in web technologies. An example being the popular JS framework Bootstrap which provides a number of starting templates based on common design scenarios.
+
+The template in this case followed the following structure:
+- a beginning section out side of a funcition declaring variables
+- a preload function which loads assets into the game
+- a create function which sets up the initial game
+- an update function which listens to and responds to user input, e.g. moving a player on the screen
+
+In P1, I found that as I worked with the learners to respond ot their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
+
+At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
+INSERT QUOTE FROM SU AND TOBY
+
+Despite building familarity with code, at this stage  the process of adding elements still needed significant support.
+
+In a redesign of the startign code template at the end of P1, I added the following design techniques to the template to make modifying the game easier.
 
 
 #### Addressing barriers with template
 
-The creation of a template and mini challenges helped address the challenge
 
-For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
 
-While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
 
 **more polished**
 At the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
@@ -894,10 +894,15 @@ The impact of this starting template in the P2 and 3 and P4 sessions is explored
 
 <!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
 
+#### Quick Start Cards - MOVE TO LAST ONE?
+
 Brief help was available via in-line text code comments allowing for self-directed or previously proficient learners to progress with minimal support. In addition, supporting cards (see figure 4.x below) suggested possible adaptations  and illustrated the relevant code changes needed.
 
 ![](./Pictures/quickstart_phaser_1.png){width=50%}
 4.x - Example of a Quick start card
+
+
+<!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
 The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
 
@@ -924,22 +929,16 @@ As the end process is visible in fluid behaviour -->
 
 <!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
 A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
-
-
-
 <!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
 
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
-
-
 
 ### Design behaviours encouraged through use of game template
 
 In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
 NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5?
-
 
 The following sections are observations on design behaviour  that I encouraged through tool choice and design
 
@@ -1164,8 +1163,6 @@ The particular nature of the informal setting with the participation of engaged 
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
 After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
 
-
-
 ### Discussion on Authenticity of Tools
 
 **observations?**
@@ -1189,6 +1186,11 @@ These observations support existing research on computing projects in the work o
 
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
 
+#### Authentic tool use and instrumental agency
+
+The impact of coding tool use on instrumental agency can be explored here to develop the previous section
+
+**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
 
 
 ### Analysis in relation to existing research on related design toolsets
@@ -1235,9 +1237,6 @@ The following issues are relevant to the learner experience- other ways to enclo
 
 Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z.
 
-
-
-
 <!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
@@ -1254,11 +1253,6 @@ While Resnick's principles are useful for the designer of the learning experienc
 
 The next chapter explores one element on this guidance for this programme in the use of a pattern approach in adding game elements to add to the design in the form of GDPs.
 
-#### Authentic tool use and instrumental agency
-
-The impact of coding tool use on instrumental agency can be explored here to develop the previous section
-
-**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
 
 
 ### Link to next chapter
@@ -1373,7 +1367,7 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^3]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics -->
 
-
+[^1]: https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-your-first-phaser-2-game
 [^1]: https://network23.org/3m-gamemaking/an-overview-of-game-coding-tools/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/
 [^3]: https://glitch-game-makers-manual.glitch.me/
